--- a/packages/ipfs/package.json
+++ b/packages/ipfs/package.json
@@ -28,6 +28,7 @@
     "build:types": "tsc --build",
     "test": "echo 'Only interface tests live here'",
     "test:interface:core": "aegir test -f test/interface-core.js",
+    "test:interface:client": "aegir test -f test/interface-client.js",
     "test:interface:http-js": "aegir test -f test/interface-http-js.js",
     "test:interface:http-go": "aegir test -f test/interface-http-go.js",
     "test:interop": "cross-env IPFS_JS_EXEC=$PWD/src/cli.js IPFS_JS_MODULE=$PWD IPFS_JS_HTTP_MODULE=$PWD/../ipfs-http-client IPFS_REUSEPORT=false ipfs-interop",
@@ -50,10 +51,11 @@
     "electron-webrtc": "^0.3.0",
     "go-ipfs": "^0.7.0",
     "interface-ipfs-core": "^0.142.1",
+    "ipfs-client": "^0.1.0",
     "ipfs-http-client": "^48.1.1",
     "ipfs-interop": "^3.0.0",
     "ipfs-utils": "^5.0.0",
-    "ipfsd-ctl": "^7.0.2",
+    "ipfsd-ctl": "ipfs/js-ipfsd-ctl#feat/expose-grpc-addr",
     "iso-url": "^1.0.0",
     "libp2p-webrtc-star": "^0.20.1",
     "merge-options": "^2.0.0",
