--- a/examples/browser-ipns-publish/package.json
+++ b/examples/browser-ipns-publish/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "delay": "^4.4.0",
     "execa": "^4.0.3",
-    "ipfsd-ctl": "^7.0.2",
+    "ipfsd-ctl": "ipfs/js-ipfsd-ctl#feat/expose-grpc-addr",
     "go-ipfs": "^0.7.0",
     "parcel-bundler": "^1.12.4",
     "path": "^0.12.7",
