--- a/packages/ipfs-cli/tsconfig.json
+++ b/packages/ipfs-cli/tsconfig.json
@@ -15,6 +15,9 @@
       "path": "../ipfs-core-utils"
     },
     {
+      "path": "../ipfs-grpc-server"
+    },
+    {
       "path": "../ipfs-http-client"
     },
     {
