--- a/packages/ipfs-grpc-protocol/package.json
+++ b/packages/ipfs-grpc-protocol/package.json
@@ -5,6 +5,7 @@
   "keywords": [
     "ipfs"
   ],
+  "main": "dist/root.json",
   "homepage": "https://github.com/ipfs/js-ipfs/tree/master/packages/ipfs-grpc-protocol#readme",
   "bugs": "https://github.com/ipfs/js-ipfs/issues",
   "license": "(Apache-2.0 OR MIT)",
@@ -18,6 +19,13 @@
     "url": "git+https://github.com/ipfs/js-ipfs.git"
   },
   "scripts": {
-    "test": "echo 'No tests here'"
+    "test": "echo 'No tests here'",
+    "clean": "rimraf ./dist",
+    "build": "npm run clean && mkdirp ./dist && pbjs ./src/root.proto -t json -o ./dist/root.json"
+  },
+  "devDependencies": {
+    "mkdirp": "^1.0.4",
+    "protobufjs": "^6.10.2",
+    "rimraf": "^3.0.2"
   }
 }
