--- a/packages/ipfs-grpc-client/package.json
+++ b/packages/ipfs-grpc-client/package.json
@@ -46,6 +46,7 @@
     "err-code": "^2.0.3",
     "ipfs-core-utils": "^0.5.0",
     "ipfs-grpc-protocol": "0.0.0",
+    "it-first": "^1.0.4",
     "it-pushable": "^1.4.0",
     "protobufjs": "^6.10.2",
     "multiaddr": "^8.0.0",
