--- a/packages/ipfs-grpc-server/package.json
+++ b/packages/ipfs-grpc-server/package.json
@@ -37,13 +37,14 @@
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.1.8",
-    "@grpc/proto-loader": "^0.5.5",
+    "protobufjs": "^6.10.2",
     "change-case": "^4.1.1",
     "coercer": "^1.1.2",
     "debug": "^4.1.1",
-    "err-code": "^2.0.3",
     "ipfs-grpc-protocol": "0.0.0",
     "it-first": "^1.0.4",
+    "it-map": "^1.0.4",
+    "it-peekable": "^1.0.1",
     "it-pipe": "^1.1.0",
     "it-pushable": "^1.4.0",
     "ws": "^7.3.1"
